# mcu-info-util

./: .gitignore  .travis.yml  LICENSE.txt  PKGBUILD  README.md  device_tree.py  mcu-info-util.py  setup.py  svd.py
mcu_info_util/: __init__.py  __main__.py  device_tree.py  find_compiler.py  linker_script.py  svd.py  svd_utils.py  toolchain.py  toolchain_arm.py  toolchain_avr.py  toolchain_msp430.py  utils.py
mcu_info_util/metadata/SVD/STMicroelectronics/: STM32F0x0.svd  STM32F0x2.svd  STM32F302x.svd  STM32L0x2.svd
mcu_info_util/tests/: test_as_library.py
metadata/: stm32_catalog.json
metadata/SVD/STMicroelectronics/: STM32F0x8.svd  STM32F429x.svd  STM32L0x3.svd  STM32L4x1.svd  STM32L4x2.svd  STM32L4x6.svd
misc/: rules.mk  toolchain.cmake
misc/cmake-project/: CMakeLists.txt  main.c
misc/makefile-project/: Makefile
share/mcu-info-util/: README.txt
share/mcu-info-util/SVD/STMicroelectronics/: STM32L0x1.svd  STM32L15xxE.svd  STM32L1xx.svd  STM32L4x3.svd  STM32L4x5.svd
